# slim_conservation_orthogroup_generation

./: .env  .gitignore  MANIFEST.in  README.md  advanced.md  environment.yml  environment_compatible.yml  environment_linux.yml  pipeline_pt1.code-workspace  prepare_data.sh  pyproject.toml  setup.cfg  setup.py  setup_instructions_detailed.md  setup_notes.md
data/orthoDB_sample_data/: odb11v0_OG2genes.sqlite  odb11v0_OG2genes.tab  odb11v0_OGs.sqlite  odb11v0_OGs.tab  odb11v0_all_og.fasta  odb11v0_all_og.sqlite  odb11v0_gene_xrefs.sqlite  odb11v0_gene_xrefs.tab  odb11v0_genes.sqlite  odb11v0_genes.tab
examples/: readme.md
examples/ex1_single_gene/: params.yml  readme.md  run.sh
examples/ex2_table_with_uniprot_ids/: get_orthologs_from_table.py  map_files_back_to_table.ipynb  map_files_back_to_table.py  params.yml  readme.md  s03_add_folders_2_table.py  table_with_results.csv
examples/ex3_all_human_genes/: params.yml  pipeline_all_human_ids.py  pipeline_all_human_ids_CLI_version.py  pipeline_all_ids_in_species.out  pipeline_all_ids_in_species.py  pipeline_all_ids_in_species_CLI_version.py  readme.md  run.sh
examples/ex4_create_database_from_table/: run.sh  table.csv  table_mapped_odbgeneid.csv
examples/orthoDB_construct_groups_for_all_human_genes/: readme.md  s01_get_OGs_all_human_ids_multiprocessing.py  s04_add_iupred_score.py  s05_change_filedict_2023_11_14.py  temp.py  temp2.py  temp3.py
examples/pipeline_script/: params.yml  run.sh
examples/pipeline_single_gene/: pipeline_walkthrough.ipynb  pipeline_walkthrough.py
examples/pipeline_walkthrough_for_single_gene/: pipeline_walkthrough.ipynb  pipeline_walkthrough.py
examples/uniprotid_mapping/: map_uniprotid.py  run.sh  table_mapped_odbgeneid.csv
orthodb_tools/: __init__.py  readme.md  sql_queries.py
orthodb_tools/config/: orthodb_pipeline_parameters.py
orthodb_tools/env_variables/: env_variables.py
orthodb_tools/orthogroup_processing/: cluster.py  filters.py  find_LDOs.py  og_selection.py  pipeline.py  uniprotid_search.py
orthodb_tools/scripts/: create_filemap.py  map_uniprotid.py  orthogroup_pipeline.py  pipeline_all_genes_in_species.py  pipeline_input_table.py
orthodb_tools/tools/: cdhit_tools.py  cli_wrappers.py
scripts-gen_SQLite_dbs/: make_SQLite_database_OG2genes.py  make_SQLite_database_OGs.py  make_SQLite_database_fasta.py  make_SQLite_database_gene_xrefs.py  make_SQLite_database_genes.py
src/: main_pipeline.py  odb_group_pipeline.py  readme.md
src/local_config/: conf.py  orthodb_pipeline_parameters.py
src/local_env_variables/: .env  env_variables.py
src/local_orthoDB_group_pipeline/: cluster.py  filters.py  find_LDOs.py  og_selection.py  sql_queries.py  uniprotid_search.py
src/local_orthoDB_group_tools/: cluster.py  database.py  database_queries.py  filters.py  find_LDOs.py  main_pipeline.py  og_select.py  og_selection.py  params.json  readme.md  sql_queries.py  temp.py  uniprotid_search.py
(+127 files in other folders)
