[project]
name = "slim_conservation_orthogroup_generation"
description = "A pipeline for generating groups of homologous sequences from orthodb and processing them for conservation analysis"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Jackson Halpin", email = "jhalpin@mit.edu" }
]
license = { text = "MIT" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
    # "importlib-resources;python_version<'3.10'",
    "numpy",
    "pandas",
    "biopython >= 1.8",
    "alfpy"
]

# Update the urls once the hosting is set up.
[project.urls]
"Source" = "https://github.com/jacksonh1/slim_conservation_orthogroup_generation"

[project.scripts]
odb_groups-create_filemap = "orthodb_tools.scripts.create_filemap:main_cli"
odb_groups-map_uniprotid = "orthodb_tools.scripts.map_uniprotid:main_cli"
odb_groups-orthogroup_pipeline = "orthodb_tools.scripts.orthogroup_pipeline:main_cli"
odb_groups-pipeline_all_genes_in_species = "orthodb_tools.scripts.pipeline_all_genes_in_species:main_cli"
odb_groups-pipeline_input_table = "orthodb_tools.scripts.pipeline_input_table:main_cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "orthodb_tools.__version__"}

[tool.setuptools.packages.find]
namespaces = false
where = ["."]
include = ["orthodb_tools*"]

